--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss": "^8",
     "storybook": "^8.2.5",
     "tailwindcss": "^3.4.1",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "typescript": "^5"
   }
 }
