:sparkles: 공통 레이아웃(Header, Main, BottomMenu) 컴포넌트 구현

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "@hooks/*": ["./src/hooks/*"],
       "@styles/*": ["./src/styles/*"],
       "@components/*": ["./src/components/*"],
+      "@constants/*": ["./src/constants/*"],
       "@public/*": ["./public/*"]
     }
   },
