--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
@@ -34,9 +35,9 @@
     "eslint-config-next": "14.2.5",
     "eslint-plugin-storybook": "^0.8.0",
     "postcss": "^8",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "storybook": "^8.2.5",
     "tailwindcss": "^3.4.1",
-    "prettier-plugin-tailwindcss": "^0.6.5",
     "typescript": "^5"
   }
 }
