--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,7 @@
       "@styles/*": ["./src/styles/*"],
       "@components/*": ["./src/components/*"],
       "@constants/*": ["./src/constants/*"],
-      "@public/*": ["./public/*"]
+      "@public/*": ["public/*"]
     }
   },
   "include": ["src/types/*.ts", "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
