--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^4.5.4"
   },
