--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^4.5.4"
