--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["next/core-web-vitals", "plugin:storybook/recommended"],
   "rules": {
-    "react/jsx-key": [1, { "checkFragmentShorthand": true }]
+    "react/jsx-key": [1, { "checkFragmentShorthand": true }],
+    "react-hooks/exhaustive-deps": [0]
   }
 }
