--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "cookies-next": "^4.2.1",
     "next": "14.2.5",
     "next-client-cookies": "^1.1.1",
     "react": "^18",
